# constrained_icp

./: .gitignore
constrained-icp-py/: constrained_icp.py  main.py  pyproject.toml
